Bug 1380619 - Avoid unnecessary content process leaks in SchedulerGroup dispatch during shutdown. r=mystor, a=lizzard

SchedulerGroup dispatch needs to replicate all the quirks of dispatching
directly to threads, which means we need to handle cases where dispatch
might have failed and we have resources that we don't want to leak.

--HG--
extra : source : 187e6f6cfba70eff19308237bb9df8a4dbe3ba03